app-llm/namespace-llm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm-sim
spec:
  finalizers:
  - kubernetes
