app-llm/http-route-llm.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-sim
  namespace: llm-sim
spec:
  hostnames:
  - llm.travels.sandbox126.opentlc.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: prod-web
    namespace: ingress-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: trlp-tutorial-llm-sim
      namespace: llm-sim
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
